[package]
name = "chunkloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chunkloader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
rubato = "0.16.1"
symphonia = {version = "0.5.4", features=["aac", "mpa"]}
