[package]
name = "chunkloader"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chunkloader"
crate-type = ["cdylib"]

[dependencies]
ffmpeg-next = "7.1"
ndarray = "0.16.1"
numpy = "0.23.0"
pyo3 = "0.23.3"
thiserror = "2.0.11"
